fix: measure prediction time correctly
Correct prediction time measurement using a not processed test set.

--- a/notebooks/logistic_model_train.ipynb
+++ b/notebooks/logistic_model_train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "initial_id",
    "metadata": {},
    "outputs": [],
@@ -5898,7 +5898,7 @@
    ],
    "source": [
     "# predict class\n",
-    "%time y_pred = [1 if sentiment >= optimal_threshold else 0 for sentiment in df_test_lex[\"sentiment_sum\"]]\n",
+    "y_pred = [1 if sentiment >= optimal_threshold else 0 for sentiment in df_test_lex[\"sentiment_sum\"]]\n",
     "\n",
     "# calculate error metrics\n",
     "accuracy = accuracy_score(df_test_lex[\"label\"], y_pred)\n",
@@ -5917,6 +5917,36 @@
     "print(f'Accuracy: {accuracy:.3f}')\n",
     "print(f'Precision: {precision:.3f}')\n",
     "print(f'Recall: {recall:.3f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "15b4bed5-1cea-4186-ba58-80fa308fa317",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total time: 837.048 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "# correct time measurement\n",
+    "features = [\"text\", \"label\"]\n",
+    "df_test_lex = pd.read_csv(cfg.DATAFRAME_SAVE_PATH / \"df_test.csv\")[features]\n",
+    "\n",
+    "from prolog_query import classify_review\n",
+    "import time\n",
+    "\n",
+    "start = time.perf_counter()\n",
+    "y_pred = []\n",
+    "for review in df_test_lex[\"text\"]:\n",
+    "    y_pred.append(classify_review(review))\n",
+    "end = time.perf_counter()\n",
+    "print(f\"Total time: {end - start:.3f} seconds\")"
    ]
   }
  ],
